fix nepal flag not showing on mobile

--- a/assets/css/app.comp.css
+++ b/assets/css/app.comp.css
@@ -430,7 +430,7 @@ a {
 
 .flag {
   margin: 0 auto;
-  height: auto;
+  height: 25rem;
   width: 100%;
   text-align: center;
   padding: 1rem;
