--- a/assets/scss/layout/_game.scss
+++ b/assets/scss/layout/_game.scss
@@ -85,7 +85,7 @@
 // ========== STYLING FOR MAIN FLAG IMAGE ==========
 .flag {
   margin: 0 auto;
-  height: auto;
+  height: 25rem;
   width: 100%;
   text-align: center;
   padding: 1rem;
